# GriffinSim

./: .gitignore  CHANGELOG.md  PHASE_PLAN.md  README.md  VERSIONING.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml
apps/replay-diff/: build.gradle
apps/scenario-runner/: build.gradle
apps/wpilib-harness/: build.gradle
compat/legacy-griffinsim/: build.gradle
compat/native-halsim-extension/: build.gradle
contracts/schema/: io-frame.proto  world-snapshot.proto
contracts/spec/: determinism-contract.md  system-architecture.md
docs/: ROBOT_INTEGRATION.md  native-6dof-backend-plan.md
docs/architecture/: authoritative-physics-core.md  controller-layers.md  lockstep-bridge.md  native-halsim-extension.md  native-loading.md  scenario-spec.md
docs/milestone/: native-extension-plan.md  rebuilt-platform-milestone.md  release-checklist.md  release-process.md
docs/transformation/: gap-analysis.md  griffinsim-audit-report.md  migration-plan.md  original-vs-rebuilt.md
legacy/griffinsim-v0/: README.md
modules/frc-bridge/: build.gradle
modules/physics-core/: README.md  build.gradle
modules/rendering-spi/: README.md  build.gradle
modules/sensor-emulation/: README.md
modules/sim-contracts/: build.gradle
native/halsim-extension/: CMakeLists.txt  README.md
native/halsim-extension/include/: griffinsim_halsim_extension.h
native/halsim-extension/src/: griffinsim_halsim_extension.cpp
scenarios/examples/: holonomic-pose-controller.properties  two-robot-head-on.properties  (+1 more)
scripts/: build_native_extension_with_wpilib.sh  prepare_native_extension.sh  prepare_rebuilt_release.sh  publish_rebuilt_artifacts.sh  release_smoke.sh  stage_rebuilt_artifacts.sh  validate_native_extension_with_wpilib.sh
vendordeps/: GriffinSim.json
(+426 files in other folders)
